Refactor ThreatIndicatorRepository: replace getFirst() with get(0) for improved clarity and consistency in retrieving indicator rows, and update import for GeneratedKeyHolder to enhance code maintainability.